--- a/.github/workflows/version.yaml
+++ b/.github/workflows/version.yaml
@@ -15,14 +15,7 @@ jobs:
         fetch-depth: '0'
 
     - name: Bump version and push tag
-      # uses: anothrNick/github-tag-action@1.61.0 # Don't use @master unless you're happy to test the latest version
-      # env:
-      #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   WITH_V: true
-      uses: paulhatch/semantic-version@v5.0.2
-      with:
-        # The prefix to use to identify tags
-        tag_prefix: "v"
-        # A string which, if present in a git commit, indicates that a change represents a
-        # major (breaking) change, supports regular expressions wrapped with '/'
-        major_pattern: "(MAJOR)"
+      uses: ./.github/actions/github-tag-action
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        WITH_V: true
